# manimate

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: main.py
src/controllers/: fsm_controller.py  mobject_helper.py  scene_controller.py
src/examples/: example_mobjects.py
src/examples/manim_scripts/: derivative_sinx.py  exported_derivative_sinx.py  exported_geometry.py  exported_insert_binary.py  geometry.py  insert_binary.py
src/file/: reader.py  writer.py
src/fsm/: animation_generator.py  generator.py  reverser.py  state.py  state_handler.py  statelist.py
src/gui/: window.py
src/io/: export_scene.py
src/mobjects/: mobject.py  tree.py
src/model/: mobject_handler.py  scene_handler.py  state_handler.py
src/models/: fsm_model.py  mobject_helper.py  scene_model.py
src/scene/: manim_scene.py  scene_handler.py
src/view/: details_bar.py  manim_window.py  objects_bar.py  preview_window.py  state_bar.py  styles.qss  window.py
