[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manimate"
version = "1.0.0"
description = "Interactive Animation Builder for Manim"
readme = "README.md"
authors = [{name = "Kevin Cen", email="hi@kevcen.com"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'bidict>=0.21.4',
    'manim==0.15.2',
    'moderngl==5.6.4',
    'moderngl_window==2.4.1',
    'numpy>=1.22.1',
    'PySide6==6.3.0',
    'PySide2==5.15.2.1',
    'ipython==8.0.1',
]
requires-python = "==3.10"
