[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manimate"
version = "1.0.0"
description = "Interactive Animation Builder for Manim"
readme = "README.md"
authors = [{name = "Kevin Cen", email="hi@kevcen.com"}]
license = { file = "LICENSE" }
requires-python = "==3.10"
