[metadata]
name = manimate
description = An Interactive Animation Builder for Manim
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
install_requires =
    bidict>=0.21.4
    manim==0.15.2
    moderngl==5.6.4
    moderngl_window==2.4.1
    numpy>=1.22.1
    PySide6==6.3.0
    PySide2==5.15.2.1
    ipython==8.0.1
packages = find:

[options.entry_points]
console_scripts = 
    manimate = src.main:main