[metadata]
name = manimate
description = An Interactive Animation Builder for Manim
author = Kevin Cen
author_email = hi@kevcen.com
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
version = 1.0.0

[options]
python_requires = >=3.10
install_requires =
    bidict
    manim==0.15.2
    moderngl==5.6.4
    moderngl_window==2.4.1
    numpy
    PySide6
    PySide2
    ipython==8.0.1
package_dir =
    =src  
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where=src

[options.package_data]
view = styles.qss

[options.entry_points]
console_scripts = 
    manimate = src.main:main